[tool.poetry]
name = "jax-image-segmentation-unet"
version = "0.1.0"
description = ""
authors = ["PoffM"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flax = "^0.8.5"
optax = "^0.2.3"
jax = {extras = ["cuda12"], version = "^0.4.31"}
torch = "^2.4.0"
torchvision = "^0.19.0"
tqdm = "^4.66.5"
clu = "^0.0.12"
jax-dataloader = "^0.1.2"
numpy = "^2.0.1"
pynvml = "^11.5.3"
matplotlib = "^3.9.2"
orbax = "^0.1.9"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
